package securegram;

option java_package = "xyz.securegram.axolotl";

option java_outer_classname = "AbelianProtos";

message AbelianIdentity {
    optional uint32 deviceId = 1;
    optional bytes identityKey = 2;
    optional bytes signedPreKey = 3;
    optional bytes signedPreKeySignature = 4;
}

message AbelianEnvelope {
    enum Type {
        UNKNOWN = 0;
        CIPHERTEXT = 1;
        KEY_EXCHANGE = 2;
        PREKEY_BUNDLE = 3;
        RECEIPT = 5;
    }

    optional Type type = 1;
    optional string source        = 2;
    optional uint32 sourceDevice  = 3;
    optional bytes content = 4;
}
